# wxTools

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
Devel/CMake/: gcc.sh
Devel/Git/: init.sh  updateModule.sh
cmake/: wxToolsConfig.cmake.in
cmake/modules/: debug.cmake  help.cmake  uninstall.cmake
examples/: CMakeLists.txt
examples/ConvertExample/: CMakeLists.txt  ConvertExample.cpp
wxTools/: CMakeLists.txt
wxTools/include/: CMakeLists.txt  Convert.h  StatusRAII.h
wxTools/include/Preferences/: CMakeLists.txt  PreferencesPanelBase.h
wxTools/include/Preferences/Log/: CMakeLists.txt
wxTools/include/wxTools/: CMakeLists.txt  Convert.h  StatusRAII.h
wxTools/include/wxTools/Preferences/: CMakeLists.txt
wxTools/include/wxTools/Preferences/Log/: CMakeLists.txt
wxTools/src/: CMakeLists.txt  Convert.cpp  StatusRAII.cpp
wxTools/src/Preferences/: CMakeLists.txt  PreferencesPanelBase.cpp
wxTools/src/Preferences/Log/: CMakeLists.txt
wxTools/src/wxTools/: CMakeLists.txt  Convert.cpp  StatusRAII.cpp
wxTools/src/wxTools/Preferences/: CMakeLists.txt  PreferencesPanelBase.cpp
wxTools/src/wxTools/Preferences/Log/: CMakeLists.txt
